--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,10 @@ jobs:
           echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> $GITHUB_ENV
 
       - name: Update PATH
-        run: echo "/opt/homebrew/bin" >> $GITHUB_PATH
+        run: |
+          echo "/opt/homebrew/bin" >> $GITHUB_PATH
+          echo "/opt/homebrew/bin/brew shellenv" >> $GITHUB_ENV
+          source $GITHUB_ENV
 
       - name: Install dependencies
         run: |
