Integrate Homebrew setup and caching into GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,20 +18,27 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install Homebrew
-        run: |
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> $GITHUB_ENV
+      - name: Set up Homebrew
+        uses: dawidd6/action-homebrew-bump-formula@v4
+        id: set-up-homebrew
 
-      - name: Update PATH
-        run: |
-          echo "/opt/homebrew/bin" >> $GITHUB_PATH
-          echo "/opt/homebrew/bin/brew shellenv" >> $GITHUB_ENV
-          source $GITHUB_ENV
+      - name: Cache Homebrew Bundler RubyGems
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.set-up-homebrew.outputs.gems-path }}
+          key: ${{ runner.os }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
+          restore-keys: ${{ runner.os }}-rubygems-
 
-      - name: Install dependencies
+      - name: Install Homebrew Bundler RubyGems
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: brew install-bundler-gems
+
+      - name: Install create-dmg
+        run: brew install create-dmg
+
+      - name: Set up virtual environment
         run: |
-          brew install create-dmg
           python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
